# document-collections

./: .dockerignore  Dockerfile  README.md  setup.cfg  sync.sh  upload.sh
.github/: dependabot.yml
.github/workflows/: build-docker.yml  de_bundestag_dip.yml  de_fragdenstaat.yml  ti_knowledge_hub.yml
common/: catalog.py  memorious.py  zavod.py
datasets/de_bundestag_dip/: Makefile  memorious.yml  operations.py  util.py
datasets/de_fragdenstaat/: Makefile  memorious.yml  operations.py
datasets/ti_knowledge_hub/: Makefile  memorious.yml
