[metadata]
name = memorious-scrapers
url = https://github.com/investigativedata/document-collections
license = GPL3

[options]
packages = find:
install_requires:
    awscli
    memorious
    followthemoney
    furl
    pyicu
    # zavod>=0.5.0
    zavod @ git+https://github.com/opensanctions/zavod.git@sink/append

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501
